# fastapi-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose-test.yaml  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: c78d3f33663e_init.py
api/: __main__.py  app.py  config.py
api/core/: db.py  error.py  utils.py
api/core/auth/: auth.py  utils.py
api/core/search_engine/: model_training.py  projection_engine.py  text_scaler_engine.py  utils.py
api/models/: __init__.py  booking.py  contractor.py  homeowner.py  portfolio.py  project.py  quote.py  review.py  search_filter.py  user.py  utils.py
api/models/quiz/: model.py  utils.py
api/route/: __init__.py  contractor.py  homeowner.py  root.py
api/utils/: faky.py  mock_generator.py
deploy/: sitesync.me.conf
docs/db/: anomalies.html  columns.html  constraints.html  deletionOrder.txt  index.html  info-html.txt  insertionOrder.txt  orphans.html  relationships.html  routines.html  sitesync.public.xml
docs/db/tables/: booking_images.html  booking_invites.html  booking_units.html  bookings.html  contractor_analytics.html  contractor_area_preferences.html  contractor_profession_preferences.html  contractor_reviews.html  contractors.html  external_portfolio_images.html  external_portfolio_project_tasks.html  (+11 more)
scripts/: gen_uml.sh  spam_health.sh  spam_signup.sh  test_runner.sh
test/: rec_tests.py  test_10_basic.py  test_20_auth.py  test_30_contractor.py  test_40_booking.py  test_50_search.py  test_60_project.py  test_70_reviews.py  test_80_quotes.py  utils.py
(+46 files in other folders)
